[package]
name = "dharitri-wasm-node"
version = "0.0.5"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri Network <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriNetwork/dharitri-wasm-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly VM API wrapper"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools::ffi"]

[dependencies.dharitri-wasm]
version = "0.0.5"
path = "../dharitri-wasm"
